<resources>
    <string name="app_name">IOTHome</string>
    <string name="scan">Scan</string>
    <string name="connect">Connect</string>
    <string name="popup_title">IOT Home</string>
    <string name="exit_popup_message">IOT Home을 종료하시겠습니까?</string>
    <string name="retry_popup_message">Device를 찾지 못했습니다.\n다시 시도하시겠습니까?</string>
    <string name="popup_yes">예</string>
    <string name="popup_no">아니오</string>
    <string name="popup_confirm">확인</string>
    <string name="popup_add">추 가</string>
    <string name="popup_cancel">취 소</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="bluetooth_not_supported">Bluetooth is not available on this device.</string>
    <string name="bluetooth_connecting">Device와 연결 중입니다.</string>
    <string name="action_settings">Setting</string>
    <string name="security_select_menu">메뉴를 선택해주세요.</string>
    <string name="security_unlocked">보안이 해제되었습니다.</string>
    <string name="security_locked">보안 경계 중입니다.</string>
    <string name="security_locked2">RFID를 이용하여 보안 해제해주세요.</string>
    <string name="connecting_to_cctv">CCTV에 연결중입니다.</string>
    <string name="temperature">온도</string>
    <string name="humidity">습도</string>
    <string name="illuminance">조도</string>
    <string name="aircon">에어컨</string>
    <string name="gas">GAS</string>
    <string name="door">현관</string>
    <string name="lamp">조명</string>
    <string name="curtain">커튼</string>
    <string name="user">사용자</string>
    <string name="bt1">BT #1</string>
    <string name="bt2">BT #2</string>
    <string name="intruder">침입 발생!!</string>
    <string name="please_input_name">이름을 입력하세요.</string>
    <string name="please_input_rfid">RFID를 입력하세요.</string>
    <string name="already_exist_user_name">이미 등록된 사용자입니다.</string>
    <string name="already_exist_rfid">이미 등록된 카드입니다.</string>
    <string name="user_name">이 름</string>
    <string name="user_rfid">RFID No.</string>
    <string name="delete">삭 제</string>
    <string name="user_add">추 가</string>
    <string name="user_add_title">사 용 자 추 가</string>
    <string name="admin_name">관리자</string>
    <string name="item_name">품목</string>
    <string name="item_amount">수량</string>
    <string name="shelf_life">유통기한</string>
    <string name="fridge_item_income">입고</string>
    <string name="fridge_item_release">출고</string>
    <string name="fridge_item_add">품목추가</string>
    <string name="fridge_item_confirm">품목확인</string>
    <string name="fridge_item_order">이(가) 자동 주문 되었습니다.</string>
    <string name="status_open">열림</string>
    <string name="status_close">닫힘</string>

</resources>
