<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView_fridge_control_title"
        android:src="@drawable/fridge_control_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView_fridge_control_title">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"  >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView_fridge_control_main"
                android:src="@drawable/fridge_control_main"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_fridge_mode"
                android:layout_below="@+id/imageView_fridge_control_main"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="20dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout_user_list_tile"
                android:background="#4f6228">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/TextView_frdige_item_name"
                    android:text="@string/item_name"
                    android:textSize="20dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_fridge_shelf_life"
                    android:text="@string/shelf_life"
                    android:textSize="20dp"
                    android:layout_weight="2"
                    android:gravity="center_horizontal|clip_vertical"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:layout_gravity="center" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_fridge_item_amount"
                    android:text="@string/item_amount"
                    android:textSize="20dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:layout_gravity="center" />
            </LinearLayout>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/listView_item_list"
                android:layout_below="@+id/linearLayout_user_list_tile"
                android:layout_above="@+id/textView_fridge_item_add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fridge_item_add"
                android:id="@+id/textView_fridge_item_add"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="#4f6228"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>